kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: astria-dev-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astria-dev-cluster-deployment
  labels:
    app: astria-dev-cluster
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-dev-cluster
  template:
    metadata:
      labels:
        app: astria-dev-cluster
    spec:
      containers:
        - name: celestia-app
          command: ["/scripts/start-celestia-appd.sh"]
          image: "ghcr.io/astriaorg/celestia-app:v0.11.0"
          volumeMounts:
            - mountPath: /scripts/
              name: celestia-appd-scripts-volume
            - mountPath: /home/celestia
              name: celestia-home-vol
          ports:
            - containerPort: 26657
        - name: celestia-bridge
          command:
          - /scripts/start-bridge.sh
          image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
          volumeMounts:
            - mountPath: /scripts/
              name: bridge-scripts-volume
            - mountPath: /home/celestia
              name: celestia-home-vol
          ports:
            - containerPort: 26659
              name: bridge-svc
        - name: metro-sequencer
          command: ["/scripts/start-metro.sh"]
          image: "ghcr.io/astriaorg/metro:0.0.5"
          ports:
            - containerPort: 1318
              name: sequencer-svc
            - containerPort: 9100
          volumeMounts:
            - mountPath: /scripts/
              name: metro-scripts-volume
            - mountPath: /home/metro
              name: metro-home-vol
        - name: astria-sequencer-relayer
          image: "ghcr.io/astriaorg/astria-sequencer-relayer:0.0.5-local"
          command: ["/usr/local/bin/astria-sequencer-relayer"]
          args:
            - "--sequencer-endpoint=http://localhost:1318"
            - "--celestia-endpoint=http://localhost:26659"
            - "--validator-key-file=/root/.metro/config/priv_validator_key.json"
          volumeMounts:
            - mountPath: /home/relayer
              name: relayer-home-vol
            - mountPath: /root/.metro
              name: metro-home-vol
              readOnly: true
        - name: astria-conductor
          image: "ghcr.io/astriaorg/astria-conductor:0.0.5-local"
          command: ["/usr/local/bin/astria-conductor"]
          args:
            - "--tendermint-url=http://localhost:1318"
            - "--celestia-node-url=http://localhost:26659"
            - "--chain-id=ethereum"
            - "--execution-rpc-url=http://localhost:50051"
          volumeMounts:
            - mountPath: /home/conductor
              name: conductor-home-vol
        - name: geth-executor
          command: ["/scripts/start-geth.sh"]
          image: "ghcr.io/astriaorg/go-ethereum:local-new-grpc"
          volumeMounts:
            - mountPath: /scripts/
              name: executor-scripts-volume
              readOnly: true
            - mountPath: /home/geth
              name: executor-home-vol
            - mountPath: /root/.metro
              name: metro-home-vol
          ports:
            - containerPort: 8545
              name: executor-svc
            - containerPort: 50051
      volumes:
      - name: bridge-scripts-volume
        configMap:
          name: bridge-scripts
          defaultMode: 0500
      - name: metro-scripts-volume
        configMap:
          name: metro-scripts
          defaultMode: 0500
      - name: celestia-appd-scripts-volume
        configMap:
          name: celestia-appd-scripts
          defaultMode: 0500
      - name: executor-scripts-volume
        configMap:
          name: executor-scripts
          defaultMode: 0500
      - emptyDir: {}
        name: celestia-home-vol
      - emptyDir: {}
        name: metro-home-vol
      - emptyDir: {}
        name: executor-home-vol
      - emptyDir: {}
        name: relayer-home-vol
      - emptyDir: {}
        name: conductor-home-vol
---
