kubernetes/astria-dev-cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: astria-dev-cluster
---
apiVersion: v1
kind: Service
metadata:
  name: astria-dev-cluster-service
  namespace: astria-dev-cluster
spec:
  ports:
  - name: sequencer-svc
    port: 1318
    targetPort: sequencer-svc
  - name: bridge-svc
    port: 26659
    targetPort: bridge-svc
  selector:
    app: astria-dev-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: astria-dev-cluster
  name: astria-dev-cluster-deployment
  namespace: astria-dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astria-dev-cluster
  template:
    metadata:
      labels:
        app: astria-dev-cluster
    spec:
      containers:
      - command:
        - /scripts/start-celestia-appd.sh
        image: ghcr.io/astriaorg/celestia-app:v0.11.0
        name: celestia-app
        ports:
        - containerPort: 26657
        volumeMounts:
        - mountPath: /scripts/
          name: celestia-appd-scripts-volume
        - mountPath: /home/celestia
          name: celestia-home-vol
      - command:
        - /scripts/start-bridge.sh
        image: ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7
        name: celestia-bridge
        ports:
        - containerPort: 26659
          name: bridge-svc
        volumeMounts:
        - mountPath: /scripts/
          name: bridge-scripts-volume
        - mountPath: /home/celestia
          name: celestia-home-vol
      - command:
        - /scripts/start-metro.sh
        image: ghcr.io/astriaorg/metro:0.0.3
        name: metro-sequencer
        ports:
        - containerPort: 1318
          name: sequencer-svc
        - containerPort: 9100
        volumeMounts:
        - mountPath: /scripts/
          name: metro-scripts-volume
        - mountPath: /home/metro
          name: metro-home-vol
      - args:
        - --sequencer-endpoint=http://localhost:1318
        - --celestia-endpoint=http://localhost:26659
        - --validator-key-file=/root/.metro/config/priv_validator_key.json
        command:
        - /usr/local/bin/relayer
        image: ghcr.io/astriaorg/sequencer-relayer:0.0.4
        name: astria-sequencer-relayer
        volumeMounts:
        - mountPath: /home/relayer
          name: relayer-home-vol
        - mountPath: /root/.metro
          name: metro-home-vol
          readOnly: true
      - args:
        - --tendermint-url=http://localhost:1318
        - --celestia-node-url=http://localhost:26659
        - --chain-id=ethereum
        - --execution-rpc-url=http://localhost:50051
        command:
        - /usr/local/bin/conductor
        image: ghcr.io/astriaorg/astria-conductor:0.0.4
        name: conductor
        volumeMounts:
        - mountPath: /home/conductor
          name: conductor-home-vol
      - command:
        - /scripts/start-geth.sh
        image: ghcr.io/astriaorg/go-ethereum:0.0.3
        name: geth-executor
        ports:
        - containerPort: 8545
          name: executor-svc
        - containerPort: 50051
        volumeMounts:
        - mountPath: /scripts/
          name: executor-scripts-volume
          readOnly: true
        - mountPath: /home/geth
          name: executor-home-vol
        - mountPath: /root/.metro
          name: metro-home-vol
          readOnly: true
      volumes:
      - configMap:
          defaultMode: 320
          name: bridge-scripts-4fc42tfbmf
        name: bridge-scripts-volume
      - configMap:
          defaultMode: 320
          name: metro-scripts-h62dhbtdc5
        name: metro-scripts-volume
      - configMap:
          defaultMode: 320
          name: celestia-appd-scripts-c42ghtth77
        name: celestia-appd-scripts-volume
      - configMap:
          defaultMode: 320
          name: executor-scripts-6kkk6tm26m
        name: executor-scripts-volume
      - emptyDir: {}
        name: celestia-home-vol
      - emptyDir: {}
        name: metro-home-vol
      - emptyDir: {}
        name: executor-home-vol
      - emptyDir: {}
        name: relayer-home-vol
      - emptyDir: {}
        name: conductor-home-vol
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: astria-dev-cluster-ingress
  namespace: astria-dev-cluster
spec:
  rules:
  - host: astria.localdev.me
    http:
      paths:
      - backend:
          service:
            name: astria-dev-cluster-service
            port:
              number: 8545
        path: /executor/(.*)
        pathType: Prefix
