kubernetes/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astria-dev-cluster-ingress
  namespace: astria-dev-cluster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: executor.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: evm-service
                port:
                  name: json-rpc-svc
    - host: ws-executor.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: evm-service
                port:
                  name: ws-rpc-svc
    - host: faucet.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: faucet-service
                port:
                  name: faucet-svc
    - host: blockscout.astria.localdev.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: blockscout-svc
                port:
                  name: blockscout
